INC-485: return default IEP level for a prison if there is no current IEP for a list of booking IDs (#1241)